# boilerplate_removal

./: .gitignore  README.md  pyproject.toml
doc/: benchmark.py  debug_mil_fetch.html  debug_mil_render.html  plan.md  urls.txt  测试集.txt
src/trafipipe/: __init__.py  cli.py  config.py  crawl.py  exceptions.py  extract.py  fetch.py  pipeline.py  render.py
tests/: 1.py  batch_run.py  test.md  test_config.py
